package gputop;

/*
 * To Browser
 */

message DevInfo
{
    required uint32 devid = 1;
    required uint64 n_eus = 2;
    required uint64 n_eu_slices = 3;
    required uint64 n_eu_sub_slices = 4;
    required uint64 eu_threads_count = 5;
    required uint64 subslice_mask = 6;
    required uint64 slice_mask = 7;
    required uint32 gen = 8;
    required uint64 timestamp_frequency=9;
    required uint64 gt_min_freq=10;
    required uint64 gt_max_freq=11;
    required string devname = 12;
    required string prettyname = 13;
}

enum GLCounterType
{
    RAW = 1;
    DURATION_RAW = 2;
    DURATION_NORM = 3;
    EVENT = 4;
    THROUGHPUT = 5;
    TIMESTAMP = 6;
}

enum GLCounterDataType
{
    UINT64 = 1;
    UINT32 = 2;
    DOUBLE = 3;
    FLOAT = 4;
    BOOL32 = 5;
}

message GLCounter
{
    required uint32 id = 1;
    required string name = 2;
    required string description = 3;
    required GLCounterType type = 4;
    required uint32 data_offset = 5;
    required GLCounterDataType data_type = 6;
    required uint64 maximum = 7;
}

message GLQueryInfo
{
    required uint32 id = 1;
    required string name = 2;
    repeated GLCounter counters = 3;
    required uint32 data_size = 4;
}

message Features
{
    required DevInfo devinfo = 1;
    required bool has_gl_performance_query = 2; /* implies single context view */
    required bool has_i915_oa = 3;
    repeated GLQueryInfo gl_queries = 4;
    /* NB: Available OA queries are inferred from devinfo */

    required uint32 n_cpus = 5;
    required string cpu_model = 6;
    required string kernel_release = 7;
    required string kernel_build = 8;
    required bool fake_mode = 9;
    repeated string supported_oa_uuids = 10;
    repeated string tracepoints = 11;
    repeated string notices = 12;
    required int32 server_pid = 13;
}

message ProcessInfo
{
    required uint32 pid = 1;
    required string cmd_line = 2;
    required string comm = 3;
}

message LogEntry
{
  required uint32 log_level = 1;
  required string log_message = 2;
  //optional uint64 timestamp = 3;
}

message Log
{
  repeated LogEntry entries = 1;
}

message CloseNotify
{
    required uint32 id=1;
}

message BufferFillNotify
{
    required uint32 stream_id=1;
    required uint32 fill_percentage=2;
}

message CpuStats
{
    required uint64 timestamp = 1;
    required uint32 user = 2;
    required uint32 nice = 3;
    required uint32 system = 4;
    required uint32 idle = 5;
    required uint32 iowait = 6;
    required uint32 irq = 7;
    required uint32 softirq = 8;
    required uint32 steal = 9;
    required uint32 guest = 10;
    required uint32 guest_nice = 11;
}

message CpuStatsSet
{
    required uint32 id = 1; /* handle used to open stream */
    repeated CpuStats cpus = 2;
}

message TracepointInfo
{
    required uint32 event_id = 1;
    required string sample_format = 2;
}

message HW_ID
{
    repeated uint64 ctx_hw_id = 1;
    repeated uint64 vgpu_id = 2;
}

message Message
{
    optional string reply_uuid = 1;

    oneof cmd {
        string error = 2;
        bool ack = 3;
        Features features = 4;
        Log log = 5;
        CloseNotify close_notify = 6;
        BufferFillNotify fill_notify = 7;
        ProcessInfo process_info = 8;
        CpuStatsSet cpu_stats = 9;
        TracepointInfo tracepoint_info = 10;
        HW_ID hw_id = 11;
    }
}

/*
 * From Browser
 */
message OAStreamInfo
{
    required string uuid = 1;
    //required uint32 format = 2;
    required uint32 period_exponent = 3;
    //TODO: allow specifying a specific context to profile
    required bool per_ctx_mode = 4;
}

message TracepointConfig
{
    required int32 pid = 1;
    required int32 cpu = 2;
    required uint32 id = 3;
}

message GenericEventInfo
{
    required int32 pid = 1;
    required int32 cpu = 2;
    required uint64 type = 3; //E.g. _TYPE_SOFTWARE or _TYPE_HARDWARE
    required uint64 config = 4; //E.g _COUNT_SW_CONTEXT_SWITCHES
}

message CpuStatsInfo
{
    required uint32 sample_period_ms = 1;
}

message OpenStream
{
    required uint32 id = 1;

    oneof type {
        uint32 gl_query = 2;
        OAStreamInfo oa_stream = 3;
        TracepointConfig tracepoint = 4;
        GenericEventInfo generic = 5;
        CpuStatsInfo cpu_stats = 9;
    }
    required bool overwrite = 6;
    required bool live_updates = 7;
}

message Request
{
    required string uuid = 1;

    oneof req {
        bool get_features = 2;
        OpenStream open_stream = 3;
        uint32 close_stream = 4;
        uint32 get_process_info = 5;
        string test_log=6;
        string get_tracepoint_info = 7;
        bool get_hw_id_map = 8;
    }
}
